--- a/index.html
+++ b/index.html
@@ -9,3 +9,76 @@
     <script src="index.js"></script>
 </body>
 </html>
+<!-- 
+lesson 1:
+// const userName = "Mariia"; //constant is well.. constant
+// console.log(userName);
+// let userAge = 17; //let allows info to change
+// console.log(userAge);
+// let userEmail = "tymoshenkom@icloud.com";
+// console.log(userEmail);
+// let userLogin = "mariia-ty25";
+// console.log(userLogin);
+// let userPassword = "asdfg45tyhj";
+// console.log(userPassword);
+// console.log(typeof userName);
+// console.log(typeof userAge);
+//alert(userName);
+//confirm("Is this your email?");
+// let newEmail = prompt("Input your email:");
+// console.log(newEmail);
+// userAge = 18;
+// console.log(userAge);
+
+//task 1
+// let welcomeMessage = "Welcome to our website!";
+// alert(welcomeMessage);
+// confirm("Would you like to register?");
+// let userFirstName = prompt("Enter your user first name:");
+// console.log(userFirstName);
+// let userLastName = prompt("Enter your last name:");
+// console.log(userLastName);
+// let userAge = prompt("Enter your age:");
+// console.log(userAge);
+// let userNickName = prompt("Enter your chooses nick name for the website:");
+// console.log(userNickName);
+// let userEmail = prompt("Enter your email:");
+// console.log(userEmail);
+// let userPassword = prompt("Enter your password:");
+// console.log(userPassword);
+
+//task 2
+// let str = "Привіт";
+// console.log(typeof str);
+// let num = 123;
+// console.log(typeof num);
+// let flag = true;
+// console.log(typeof flag);
+// let txt = "true";
+// console.log(typeof txt);
+
+//task 3
+const boolTrue = true;
+console.log(typeof boolTrue);
+const boolFalse = false; 
+console.log(typeof boolFalse);
+const word = "revolving";
+console.log(typeof word);
+const greeting = "hello";
+console.log(typeof greeting);
+const day = 11;
+console.log(typeof day);
+
+let answer = true;
+console.log(typeof answer);
+let year = 2024;
+console.log(typeof year);
+let month = 8;
+console.log(typeof month);
+let action = "run";
+console.log(typeof action);
+let question = "How are you?";
+console.log(typeof question);
+
+
+-->
