new lesson added

--- a/index.html
+++ b/index.html
@@ -80,5 +80,38 @@ console.log(typeof action);
 let question = "How are you?";
 console.log(typeof question);
 
+//Lesson 2
+// const x = 11;
+// const y = 5;
+// console.log(x + y);
+// console.log(x - y);
+// console.log(x * y);
+// console.log(x / y);
+// console.log(x % y);
+// let value = 5;
+// value = value + 10;
+// //value += 10;
+// console.log(value);
+// const x = 5;
+// const y = 10;
+// const z = 5;
+// console.log("x > y", x > y);
+// console.log("x < y", x < y);
+// console.log("x < z", x < z);
+// console.log("x === z", x === z);
+// const valueA = "5";
+// console.log(Number(valueA));
+// console.log(valueA);
+// const valueB = "Hi";
+// console.log(Number(valueB));
+// console.log(typeof Number(valueA));
+// console.log(typeof String(valueA));
+// console.log(Number.parseInt("5px"));
+// console.log(Number.parseFloat("5.5564px"));
+// const validNumber = Number("67");
+// console.log(Number.isNaN(validNumber));
+// const invalidNumber = Number("Hello");
+// console.log(Number.isNaN(invalidNumber));
+
 
 -->
