--- a/index.html
+++ b/index.html
@@ -113,5 +113,18 @@ console.log(typeof question);
 // const invalidNumber = Number("Hello");
 // console.log(Number.isNaN(invalidNumber));
 
+//Lesson 3
+// const guestName = "Mariia";
+// const guestLastName = "Ty";
+// const hotelName = "Palazio";
+// const roomNum = 4060;
+// const message = `Guest ${guestName} ${guestLastName} is stayint in ${hotelName} in room number ${roomNum}`;
+// console.log(message);
+
+// let groupName = "FE_1y_25_02_09_23 Students";
+// let numOfStudents = 9;
+// let subject = "FrontEnd";
+// let mood = "happy";
+// let message = `Hello our group is called ${groupName} there are ${numOfStudents} students here, we are studying ${subject}. We feel ${mood} while learning more about it!`;
 
 -->
