--- a/index.html
+++ b/index.html
@@ -127,4 +127,64 @@ console.log(typeof question);
 // let mood = "happy";
 // let message = `Hello our group is called ${groupName} there are ${numOfStudents} students here, we are studying ${subject}. We feel ${mood} while learning more about it!`;
 
+//Lesson 4
+//and
+// const num = 20;
+// const result = num > 50 && num < 30;
+// console.log(result);
+//or
+// const num = 5;
+// const result = num < 10 || num > 30;
+// console.log(result);
+//not
+// console.log(true);
+// console.log(!true);
+
+// let cost = 0;
+// const subsciption = 'pro';
+// if (subsciption === 'pro') {
+//     cost = 100;
+// }
+// console.log(cost);
+
+// let cost = 0;
+// const subsciption = "free";
+// if (subsciption === "pro") {
+//   cost = 100;
+// }
+// else {
+//     cost = 0
+// }
+// console.log(cost);
+
+// let cost;
+// const subsciption = "premium";
+// if (subsciption === "free") {
+//   cost = 0;
+// }
+// else if (subsciption === "premium") {
+//     cost = 500;
+// } else {
+//   console.log("Invalid subscription type");
+// }
+// console.log(cost);
+
+// let type;
+// const age = prompt('How old are you?');
+// if (age >= 18){
+//     type = 'adult;'
+//     console.log('You are an adult');
+// } else {
+//     type = 'child';
+//     console.log('You are a child');
+// }
+
+// const age = 20;
+// const type = age >= 18 ? 'adult' : 'child';
+// console.log(type);
+//last one is shown 
+// console.log(1 && 4 && 7 && 'mango');
+//true takes priority 
+// console.log("name" || "" || null || 0 || undefined);
+
 -->
