added and moved lesson 6

--- a/index.html
+++ b/index.html
@@ -309,4 +309,81 @@ console.log(typeof question);
 
 // console.log(result);
 
+//Lesson 6
+
+// let counter = 0;
+// while (counter < 10) {
+//   console.log("counter: ", counter);
+//   counter ++;
+// }
+
+// let clientCounter = 18;
+// let maxClients = 15;
+// while (clientCounter > maxClients) {
+//   console.log(clientCounter);
+//   clientCounter++;
+// }
+
+// let password = "";
+// do {
+//   password = prompt("Enter your password (more than 4 characters): ");
+// } while (password.length < 5);
+
+// console.log("Entered password: ", password);
+
+// const max = 10;
+// for (let i = 0; i < max; i += 1) {
+//   console.log(i);
+// }
+
+// const target = 3;
+// let sum = 0;
+
+// for (let i = 0; i <= target; i += 1) {
+//   sum += i;
+// }
+// console.log(sum);
+
+//breaks comp because condition is never made false
+// while (true) {
+//   alert("Вас заблоковано, вишліть 1000$ на карту: 2425 5489 6798 6378");
+// }
+
+// let secretNumber = Math.floor(Math.random()*10+1);
+// let guess;
+
+// do {
+//   guess = prompt("Guess a number form 1 to 100: ");
+// } while (guess != secretNumber);
+
+// alert("Congradualtions you win!");
+
+// let initialAmount = 1000; // початкова сума в грн
+// let monthlyContribution = 200; // щомісячний внесок у грн
+// let interestRate = 0.02; // 2% щомісячна відсоткова ставка
+// let months = 12; // кількість місяців
+
+// for (let i = 1; i <= months; i++) {
+//   initialAmount += monthlyContribution; // додаємо щомісячний внесок
+//   initialAmount += initialAmount * interestRate; // додаємо відсотки
+//   console.log(
+//     `Місяць ${i}: ваш баланс становить ${initialAmount.toFixed(2)} грн`
+//   );
+// }
+
+// for (let i = 0; i < 10; i += 1) {
+//   if (i === 5) {
+//     break;
+//   }
+// }
+
+// const number = 10;
+// for (let i = 0; i < number; i += 1) {
+//   if (i % 2 === 0) {
+//     //console.log("парне i: ", i);
+//     continue;
+//   }
+//   console.log("Непарне i: ", i); // 1, 3, 5, 7, 9
+// }
+
 -->
