--- a/index.html
+++ b/index.html
@@ -463,4 +463,54 @@ console.log(typeof question);
 // }
 // console.log(total);
 
+
+//Lesson 8
+
+//const message = "Welcome to Toronto!";
+//console.log(message.split(" "));
+
+// const clients = ['Mango', 'Poly', 'Ajax'];
+// console.log(clients.join(', '));
+
+// const clients = ["Mango", "Ajax", "Poly", "Kiwi"];
+// console.log(clients.indexOf("Poly"));
+// console.log(clients.indexOf("Apple"));
+
+// const clients = ["Mango", "Ajax", "Poly", "Kiwi"];
+// console.log(clients.includes("Poly"));
+// console.log(clients.includes("o"));
+
+// const fruit = "apple";
+// if (fruit === "apple" || fruit === "strawberry")
+//   console.log("It is a red fruit!");
+
+// const redFruits = ["apple", "strawberry", "cherry", "cranberries"];
+// const fruit = prompt("What fruit would you like to buy?");
+//     //"cherry";
+
+// if (redFruits.includes(fruit)) {
+//     console.log("It is a red fruit!");
+// }
+
+// const stack = [];
+// stack.push(1);
+// stack.push(5);
+// console.log(stack);
+
+// const stack = []; //end of list 
+// stack.push(1);
+// console.log(stack);
+// stack.push(2);
+// console.log(stack);
+// stack.push(3);
+// console.log(stack);
+// console.log(stack.pop());
+// console.log(stack.pop());
+// console.log(stack);
+
+// const clients = ["Mango", "Ajax", "Poly"]; //start of list 
+// console.log(clients.shift());
+// clients.unshift("Kiwi");
+// console.log(clients);
+
 -->
