added new lesson

--- a/index.html
+++ b/index.html
@@ -513,4 +513,56 @@ console.log(typeof question);
 // clients.unshift("Kiwi");
 // console.log(clients);
 
+//lesson 10
+//arrow function
+//basic
+// const add = function (a, b, c) {
+//   return a + b + c;
+// };
+//arrow
+//const add = (a, b, c) =>  a + b + c;
+
+// const bar = function () {
+//   console.log("bar");
+// };
+
+// const baz = function () {
+//   console.log("baz");
+// };
+
+// const foo = function () {
+//   console.log("foo");
+//   bar();
+//   baz();
+// };
+
+// foo();
+
+//not really
+// const getArray = (...arr) => arr;
+
+// const newArr = () => {
+//     const a = 3;
+//     arr = getArray(1, 3, 5, 7, 8, 9, 2);
+//     for (let i = 0; i < arr.length; i++) {
+//         arr[i] = arr[i] * a;
+//     }
+//     return arr;
+// };
+
+// console.log(newArr());
+
+//solution 
+// function multiplyArray(arr, multiplier) {
+//   let result = [];
+//   for (let i = 0; i < arr.length; i++) {
+//     result.push(arr[i] * multiplier);
+//   }
+//   return result;
+// }
+
+// const numbers = [1, 2, 3, 4, 5];
+// const multipliedArray = multiplyArray(numbers, 2);
+
+
 -->
