added new lesson

--- a/index.html
+++ b/index.html
@@ -913,4 +913,44 @@ console.log(imdb);
 // console.log(anyAvailable);
 */
 
+*/
+// //lesson 15
+// const tweets = [
+//   { id: "000", likes: 5, tags: ["js", "nodejs"] },
+//   { id: "001", likes: 2, tags: ["html", "css"] },
+//   { id: "002", likes: 17, tags: ["html", "js", "nodejs"] },
+//   { id: "003", likes: 8, tags: ["css", "react"] },
+//   { id: "004", likes: 0, tags: ["js", "nodejs", "react"] },
+// ];
+
+// const likes = tweets.reduce((totalLikes, tweet) => totalLikes + tweet.likes, 0);
+
+// console.log(likes);
+
+// const numbers = [2, 1, 4, 3, 5];
+// console.log('Before sort: ', numbers);
+// console.log('After sort: ', numbers.sort());
+
+// const users = [
+//   { name: 'Mango', daysActive: 15 },
+//   { name: 'Poly', daysActive: 4 },
+//   { name: 'Ajax', daysActive: 27 },
+//   { name: 'Chelsey', daysActive: 2 },
+// ];
+
+// const sortByActiveDays = (a, b) => b.daysActive - a.daysActive;
+
+// console.log(users.sort(sortByActiveDays));
+
+
+const salary = {
+  mango: 100,
+  poly: 50,
+  ajax: 150,
+};
+
+const totalSalary = Object.values(salary).reduce((total, pay) => total + pay, 0);
+console.log(totalSalary);
+*/
+
 -->
