--- a/index.html
+++ b/index.html
@@ -38,11 +38,55 @@
     </form> -->
 
     <!-- <button id="btn">Click Me</button> -->
-<!-- 
+    <!-- 
     <input type="text" placeholder="Enter your name: " class="txt"/>
     <button class="btn">Привітатися</button> -->
 
-    <button class="cBg">Change Background Color</button>
+    <!-- <button class="cBg">Change Background Color</button> -->
+    <!-- 
+    <input type="text" id="input1" placeholder="Поле для введення" />
+    <input type="text" id="input2" placeholder="Ще одне поле" />
+    <button id="setFocusButton">Фокус на перше поле</button>
+    <p id="focusInfo">Немає активного елемента</p> -->
+    <!-- 
+    <h2>Подія change для елементів форми</h2>
+    <label for="textInput">Текстове поле (зміна після втрати фокусу):</label>
+    <input type="text" id="textInput" placeholder="Введіть текст" />
+    <p id="textOutput">Очікуємо зміни...</p>
+
+    <label for="selectInput">Виберіть значення:</label>
+    <select id="selectInput">
+      <option value="">Оберіть...</option>
+      <option value="Option 1">Опція 1</option>
+      <option value="Option 2">Опція 2</option>
+      <option value="Option 3">Опція 3</option>
+    </select>
+    <p id="selectOutput">Нічого не вибрано</p>
+    <label>Checkbox (зміна одразу):</label>
+    <input type="checkbox" id="checkboxInput" />
+    <p id="checkboxOutput">Не відмічено</p>
+
+    <label>Radio (зміна одразу):</label>
+    <input type="radio" name="radioGroup" value="Radio 1" /> Radio 1
+    <input type="radio" name="radioGroup" value="Radio 2" /> Radio 2
+    <p id="radioOutput">Нічого не вибрано</p> -->
+<!-- 
+    <label for="textInput">Введіть текст:</label>
+    <input type="text" id="textInput" placeholder="Введіть текст тут..." />
+    <p>Текст у реальному часі: <span id="liveOutput"></span></p>
+
+    <label for="textareaInput">Введіть опис:</label>
+    <textarea
+      id="textareaInput"
+      placeholder="Введіть текст у текстове поле..."
+      rows="4"
+      cols="30"
+    ></textarea>
+    <p>Довжина тексту: <span id="textLength">0</span> символів</p> -->
+
+    <p class="txt">Hello User</p>
+    <button class="btn">Click to Hide</button>
+
     <script src="index.js"></script>
   </body>
 </html>
